Plugin Name: Protected Content
Author: Fabio Jun, Rheinard Khorf, Philipp Stracker

Change Log:
----------------------------------------------------------------------

1.1
----------------------------------------------------------------------
- New Add-on: Admin Side Protection
- New Add-on: Member Capabilities
- New layout of the Add-on page

1.0.4.4
----------------------------------------------------------------------
- Add column with gateway status to the payment settings

1.0.4.3
----------------------------------------------------------------------
- Add new Member-Filter that displays users with pending payments
- Fix protection of menu-items when user has multiple memberships
- Fix permission issues with protection shortcode
- Fix small bugs with several shortcodes
- Remove access to registration page while plugin is disabled

1.0.4.2
----------------------------------------------------------------------
- Add new Add-on to replace whole menus per membership-level
- Some small bugfixes

1.0.4.1
----------------------------------------------------------------------
- Fix error when testing memberships
- Fix PHP notices

1.0.4
----------------------------------------------------------------------
- Add new Add-on that allows to disable Multiple-Membership mode
- Add new Add-on to change protection of special pages (e.g. search results)
- Add Simulation Infos to explain which rule protected a certain page
- Fix default protection of special pages
- Fix assignment of private memberships via members-list
- Fix membership status-flag in database
- Fix access to unprotected pages is now possible

1.0.3
----------------------------------------------------------------------
- Fix member model fields not persisting

1.0.2
----------------------------------------------------------------------
- Add class to page body to indentify membership of the current user
- Add option to send different email when registering for a free membership